# ChangeLog for net-voip/telepathy-gabble
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-voip/cvs-repo/gentoo-x86/net-voip/telepathy-gabble/ChangeLog,v 1.43 2009/01/07 17:09:53 armin76 Exp $

  07 Jan 2009; Raúl Porcel <armin76@gentoo.org>
  telepathy-gabble-0.7.17.ebuild:
  Add ~alpha/~ia64 wrt #245949

*telepathy-gabble-0.7.17 (30 Dec 2008)

  30 Dec 2008; Olivier Crête <tester@gentoo.org>
  +telepathy-gabble-0.7.17.ebuild:
  Version bump

  24 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  telepathy-gabble-0.7.16.ebuild:
  Add ~sparc keyword, bug #245949

*telepathy-gabble-0.7.16 (14 Dec 2008)

  14 Dec 2008; Santiago M. Mola <coldwind@gentoo.org>
  -telepathy-gabble-0.7.8.ebuild, -telepathy-gabble-0.7.9.ebuild,
  +telepathy-gabble-0.7.16.ebuild:
  Version bump, remove old versions.

  09 Dec 2008; Brent Baude <ranger@gentoo.org>
  telepathy-gabble-0.7.15.ebuild:
  Marking telepathy-gabble-0.7.15 ~ppc64 for bug 245949

*telepathy-gabble-0.7.15 (06 Nov 2008)

  06 Nov 2008; Santiago M. Mola <coldwind@gentoo.org>
  +telepathy-gabble-0.7.15.ebuild:
  Version bump.

*telepathy-gabble-0.7.9 (03 Oct 2008)

  03 Oct 2008; Santiago M. Mola <coldwind@gentoo.org>
  +telepathy-gabble-0.7.9.ebuild:
  Version bump.

*telepathy-gabble-0.7.8 (21 Aug 2008)

  21 Aug 2008; Santiago M. Mola <coldwind@gentoo.org>
  -telepathy-gabble-0.7.6.ebuild, -telepathy-gabble-0.7.7.ebuild,
  +telepathy-gabble-0.7.8.ebuild:
  Version bump, remove old.

*telepathy-gabble-0.7.7 (04 Aug 2008)

  04 Aug 2008; Santiago M. Mola <coldwind@gentoo.org>
  -telepathy-gabble-0.5.14.ebuild, -telepathy-gabble-0.6.0.ebuild,
  -telepathy-gabble-0.7.5.ebuild, +telepathy-gabble-0.7.7.ebuild:
  Version bump, remove old.

*telepathy-gabble-0.7.6 (13 Jun 2008)

  13 Jun 2008; Santiago M. Mola <coldwind@gentoo.org>
  -telepathy-gabble-0.7.3.ebuild, +telepathy-gabble-0.7.6.ebuild:
  Version bump and remove old.
