@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST telepathy-gabble-0.7.15.tar.gz 1427321 RMD160 2725801ae32b2335ae54a526b9c13bdd7d59ff59 SHA1 9cda9959e4928d51275992ccb52ffce9e20677fc SHA256 b71836db3bc9f0677b4cf5a50befd5e11534467968310cd0ae1ad57667a61aaf
 DIST telepathy-gabble-0.7.16.tar.gz 1417532 RMD160 a732f8d08f401ac6decd6988d620f74dc4adee4d SHA1 ae1f0aa0e1c01f9b646ad1a19071a89fe535b1bf SHA256 4c660d9e23f66a9c76e3c31ea5b82e0b17684b294a2eb1c8641a03a5ab23bd17
 DIST telepathy-gabble-0.7.17.tar.gz 1487853 RMD160 403e5d30c41f3bf6af6dbc2ea3330a56a06dfd0e SHA1 076e72fe54dcdc58c9c12111f2b458fca581031b SHA256 1787743e2bafe2c5774bc6d5aee22f204912e5405ad2a9cffd9af0aa53e11518
+DIST telepathy-gabble-0.7.20.tar.gz 1587285 RMD160 016bd62a8a0129d76a598d2b6c2754dfc3643965 SHA1 e2f080ea8f6b3946f4bb605ff28e203375134d57 SHA256 87d378b769a537dfee9f01084c7b4bd93dfb23796ddc35207f31cc2545dd2729
 EBUILD telepathy-gabble-0.7.15.ebuild 1344 RMD160 2b8475b25da15fe05af706dd9fe495d25fa2e4d3 SHA1 5b1399c85d887ce8ae5cab8850f962c0dc73e419 SHA256 0e09c8681ce99a494151bab6d5c684ddacf0fd0a0eee72400679a99a7983de6f
 EBUILD telepathy-gabble-0.7.16.ebuild 1353 RMD160 71baab5bc4bd4d2fc2a73f56a9bd426e68d49738 SHA1 6eef6af655c899c0113e3f6130feda3fe450d08f SHA256 daa31049cc465864b381cb51e1e8bb6078edab08aab13b5a4b2310ef8fd90fd8
 EBUILD telepathy-gabble-0.7.17.ebuild 1388 RMD160 d6d6d180a48060f31d667c411a36e881ec1fcee0 SHA1 64d4c70eec5db97ff34e8dbfe6cb83215242ade2 SHA256 1e6355f7db0e05ea7b34d24b0aa1544c9ca4c8a4aeb723497144e929132b99db
-MISC ChangeLog 7805 RMD160 91199b266195b3afa2384bb6b3fee3750d69956b SHA1 a154583e92d64b4b2770a637d3009f3d46e1b76b SHA256 7a6bfa3c1834ec0c91dcc4e1e3f5e90d340b0f1d05e128ac9c6538d38b043942
+EBUILD telepathy-gabble-0.7.20.ebuild 1235 RMD160 bd410ba3947efaf1ba6bdc41beebf8d1aae6f86e SHA1 329949e299bc2a480b2ed268cfd3e082d24493d0 SHA256 84e37804f59982c74eb6b3af5a0de8687e0c84ca9f5c3087520e306d17313f2e
+MISC ChangeLog 7945 RMD160 3c32b3319fe5f6f6a55a5696d385a5c2ad04b678 SHA1 d3d3b57688d75c484100d9c98e1cb770a0feb432 SHA256 31d25cd7716aab544b287ecf7b6fb2f73c75c6d13a62a5d42f22544349aeb7f8
 MISC metadata.xml 305 RMD160 3cefb2764dc78feb295addb8303d83b7d71b1667 SHA1 16cd8bdf5dc735bf68dad2d62fe4132f08527087 SHA256 8067602a9c13faf07e0e9e40d41df3b348c6a6351e2787491c703288c44d1ff0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkmSvCEACgkQmOfEJZHYOKcZ1gCeNAgkpav51raVEgGf/eHmAoy2
+/QsAn2z3gEJfC6UryeC10FDyI9LA5REF
+=scoF
+-----END PGP SIGNATURE-----
