@@ -1,6 +1,12 @@
 # ChangeLog for net-voip/telepathy-gabble
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-voip/cvs-repo/gentoo-x86/net-voip/telepathy-gabble/ChangeLog,v 1.43 2009/01/07 17:09:53 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-voip/cvs-repo/gentoo-x86/net-voip/telepathy-gabble/ChangeLog,v 1.44 2009/02/11 11:59:37 tester Exp $
+
+*telepathy-gabble-0.7.20 (11 Feb 2009)
+
+  11 Feb 2009; Olivier Crête <tester@gentoo.org>
+  +telepathy-gabble-0.7.20.ebuild:
+  Version bump
 
   07 Jan 2009; Raúl Porcel <armin76@gentoo.org>
   telepathy-gabble-0.7.17.ebuild:
